feat: implement user and role management with Prisma, Elysia, and PostgreSQL integration

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "elysia": "latest",
+    "elysia-logger": "^0.5.2",
     "pg": "^8.18.0"
   },
   "devDependencies": {
