--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@elysiajs/swagger": "^1.3.1",
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
+    "@supabase/supabase-js": "^2.95.3",
     "elysia": "latest",
     "elysia-logger": "^0.5.2",
     "pg": "^8.18.0"
