feat: add Docker support with Dockerfile and docker-compose configuration, update package dependencies, and create .dockerignore

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,21 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+
+  core-services:
+    container_name: acs-core-services
+    build:
+      context: .
+      dockerfile: dockerfile
+    depends_on:
+      database:
+        condition: service_healthy
+    environment:
+      DB_HOST: acs-core-database
+      DB_PORT: ${DB_HOST}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_NAME: ${DB_NAME}
+      APP_PORT: ${APP_PORT}
+    ports:
+      - "${APP_PORT}:${APP_PORT}"
