--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "@supabase/supabase-js": "^2.95.3",
-    "elysia": "latest",
+    "elysia": "^1.4.23",
     "elysia-logger": "^0.5.2",
     "pg": "^8.18.0"
   },
   "devDependencies": {
     "@types/pg": "^8.16.0",
-    "bun-types": "latest",
+    "bun-types": "^1.3.9",
     "prisma": "^7.3.0"
   },
   "module": "src/index.js"
