--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,12 +21,13 @@ services:
     build:
       context: .
       dockerfile: dockerfile
-    depends_on:
-      database:
-        condition: service_healthy
     environment:
+      SUPABASE_URL: ${SUPABASE_URL}
+      SUPABASE_KEY: ${SUPABASE_KEY}
+      SUPABASE_BUCKET: ${SUPABASE_BUCKET}
       DB_HOST: acs-core-database
-      DB_PORT: ${DB_HOST}
+      DB_PORT: 5432
+      DATABASE_URL: postgres://${DB_USER}:${DB_PASSWORD}@acs-core-database:5432/${DB_NAME}
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
       DB_NAME: ${DB_NAME}
