--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,5 +32,9 @@ services:
       DB_PASSWORD: ${DB_PASSWORD}
       DB_NAME: ${DB_NAME}
       APP_PORT: ${APP_PORT}
+      APP_HOST: 0,0,0,0
     ports:
       - "${APP_PORT}:${APP_PORT}"
+    volumes:
+      - .:/app
+      - /app/node_modules
