--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,12 @@ services:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
+      TZ: Asia/Bangkok
+    command:
+      - "postgres"
+      - "-c"
+      - "timezone=Asia/Bangkok"
+
     ports:
       - "5432:5432"
     volumes:
